Se agrega instituto 16 y 17

--- a/src/components/detalles/detalles.component.html
+++ b/src/components/detalles/detalles.component.html
@@ -95,17 +95,6 @@
       ></iframe>
       } @case (9) {
       <iframe
-        title="Centro Comunitario de Salud Mental y Adicciones Cuauhtemoc (CECOSAMA Cuauhtémoc)"
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3762.1884364011394!2d-99.15778472401834!3d19.447440781835166!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1f8db204bffb3%3A0xf3e4608f6f2418!2sCentro%20Comunitario%20de%20Salud%20Mental%20y%20Adicciones%20Cuauhtemoc%20(CECOSAMA%20Cuauht%C3%A9moc)!5e0!3m2!1ses!2smx!4v1722622857407!5m2!1ses!2smx"
-        width="600"
-        height="450"
-        style="border: 0"
-        allowfullscreen=""
-        loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"
-      ></iframe>
-      } @case (10) {
-      <iframe
         title="Clínica de la ansiedad y salud mental"
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1880.5650350470385!2d-99.1368929289283!3d19.493038993583006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1f9afeae15773%3A0xb7e30ea957dcfa90!2sCl%C3%ADnica%20de%20la%20ansiedad%20y%20salud%20mental!5e0!3m2!1ses!2smx!4v1722623099308!5m2!1ses!2smx"
         width="600"
@@ -115,7 +104,7 @@
         loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"
       ></iframe>
-      } @case (11) {
+      } @case (10) {
       <iframe
         title="CEMEPI Terapias Psicológicas Sede Lindavista"
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1880.5840454636968!2d-99.13378046120566!3d19.491402695450155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1f992a0e3388f%3A0xfe256134bcf58288!2sCEMEPI%20Terapias%20Psicol%C3%B3gicas%20Sede%20Lindavista!5e0!3m2!1ses!2smx!4v1722623156015!5m2!1ses!2smx"
@@ -126,7 +115,7 @@
         loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"
       ></iframe>
-      } @case (12) {
+      } @case (11) {
       <iframe
         title="Centro De Tanatologia Y Terapia De Duelo S.C."
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3761.1218212241893!2d-99.14778262401738!3d19.49339398179903!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1f9b060cd198d%3A0xd45a401b9fcb2e2d!2sCentro%20De%20Tanatologia%20Y%20Terapia%20De%20Duelo%20S.C.!5e0!3m2!1ses!2smx!4v1722623214169!5m2!1ses!2smx"
@@ -137,7 +126,7 @@
         loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"
       ></iframe>
-      } @case (13) {
+      } @case (12) {
       <iframe
         title="Clínica Broa- Especialistas en ansiedad y depresión"
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3763.540086348416!2d-99.17833412401956!3d19.389056981881144!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1ff76d9700001%3A0x98e2d3ac28c404cc!2sCl%C3%ADnica%20Broa-%20Especialistas%20en%20ansiedad%20y%20depresi%C3%B3n!5e0!3m2!1ses!2smx!4v1722623342286!5m2!1ses!2smx"
@@ -148,7 +137,7 @@
         loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"
       ></iframe>
-      } @case (14) {
+      } @case (13) {
       <iframe
         title="ADIVAC"
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3762.1518149406065!2d-99.16177602401831!3d19.449020281833892!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1f8c4861fd7c7%3A0xcdec83262a1387ef!2sADIVAC!5e0!3m2!1ses!2smx!4v1722623388548!5m2!1ses!2smx"
@@ -159,7 +148,7 @@
         loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"
       ></iframe>
-      } @case (15) {
+      } @case (14) {
       <iframe
         title="Asociación Mexicana de Suicidología"
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3722.070412849594!2d-101.66658792398239!3d21.109758780559986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842bbfacf9d1a937%3A0x7b1c72d5800ad6a3!2sAsociaci%C3%B3n%20Mexicana%20de%20Suicidolog%C3%ADa%2C%20A.C!5e0!3m2!1ses!2smx!4v1722623462737!5m2!1ses!2smx"
@@ -170,7 +159,7 @@
         loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"
       ></iframe>
-      } @case (16) {
+      } @case (15) {
       <iframe
         title="Línea Nacional Diversidad Segura"
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3762.70136928879!2d-99.16754937401878!3d19.42530478185262!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1ff3687efa227%3A0x6ba104f94aafec87!2sConsejo%20Ciudadano%20para%20la%20Seguridad%20y%20Justicia%20de%20la%20CDMX!5e0!3m2!1ses!2smx!4v1722624551432!5m2!1ses!2smx"
@@ -181,6 +170,23 @@
         loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"
       ></iframe>
+      } @case (16) {
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d469.99501535599165!2d-99.14846192687543!3d19.54332551059477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1f79dccbd20b1%3A0x9a11e90bf0460e85!2sJaime%20Nuno%20155%2C%20Mat%C3%ADas%20Romero%2C%20Gustavo%20A.%20Madero%2C%2007210%20Ciudad%20de%20M%C3%A9xico%2C%20CDMX!5e0!3m2!1ses!2smx!4v1759865713197!5m2!1ses!2smx"
+        width="600"
+        height="450"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
+      } @case (17) {
+      <img
+        src="assets/img/lineaVida.jpg"
+        alt=""
+        srcset=""
+        class="img-details"
+      />
       } }
     </div>
     <div class="col-6 datos animate__animated animate__bounceIn">
