Se agrega el instituto 18

--- a/src/components/detalles/detalles.component.html
+++ b/src/components/detalles/detalles.component.html
@@ -187,6 +187,16 @@
         srcset=""
         class="img-details"
       />
+      } @case (18) {
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d60213.61012769454!2d-99.24099855136718!3d19.397250499999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1ff1262e6efaf%3A0x69c6187ee1923709!2sCIJ%20Benito%20Ju%C3%A1rez!5e0!3m2!1ses!2smx!4v1760657276505!5m2!1ses!2smx"
+        width="600"
+        height="450"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
       } }
     </div>
     <div class="col-6 datos animate__animated animate__bounceIn">
