--- a/src/components/titulo/titulo.component.html
+++ b/src/components/titulo/titulo.component.html
@@ -1,7 +1,8 @@
 <div class="containerTitulo">
   <img src="../../assets/LOGO_psicologa.png" alt="" srcset="" />
-  <div>
-    <span class="tituloText"> Directorio de Canalizaciones </span>
+  <div class="ps-5">
+    <!-- <span class="tituloText"> Directorio de Canalizaciones </span> -->
+    <span class="heading-secondary"> Directorio de Canalizaciones </span>
   </div>
 </div>
 <div class="divisor">　　　</div>
