--- a/src/components/titulo/titulo.component.html
+++ b/src/components/titulo/titulo.component.html
@@ -5,4 +5,4 @@
     <span class="heading-secondary"> Directorio de Canalizaciones </span>
   </div>
 </div>
-<div class="divisor">　　　</div>
+<div class="divisor">&nbsp;</div>
