Se agrega icono de moviles

--- a/src/components/titulo/titulo.component.html
+++ b/src/components/titulo/titulo.component.html
@@ -1,6 +1,6 @@
 <div class="containerTitulo">
   <img src="../../assets/LOGO_psicologa.png" alt="" srcset="" />
-  <div class="ps-5">
+  <div class="container-span ps-5">
     <!-- <span class="tituloText"> Directorio de Canalizaciones </span> -->
     <span class="heading-secondary"> Directorio de Canalizaciones </span>
   </div>
