--- a/src/components/directorio/directorio.component.html
+++ b/src/components/directorio/directorio.component.html
@@ -27,6 +27,7 @@
               <div class="card__details">
                 {{ instituto.descipcion }}
               </div>
+              <i class="card__side--body-icon icon-basic-geolocalize-05"></i>
             </div>
           </div>
           <div
