Se agregan imagenes correctas de institutos

--- a/src/components/directorio/directorio.component.html
+++ b/src/components/directorio/directorio.component.html
@@ -17,10 +17,7 @@
             >
               &nbsp;
             </div>
-            <div
-              [attr.colorBack]="instituto.imagen"
-              class="card__heading text-center"
-            >
+            <div [attr.colorBack]="1" class="card__heading text-center">
               <span class="heading-tertiary"> {{ instituto.nombre }}</span>
             </div>
             <div class="card__side--body">
@@ -31,7 +28,7 @@
             </div>
           </div>
           <div
-            [attr.colorBack]="instituto.imagen"
+            [attr.colorBack]="1"
             class="card__side card__side--back card__side--back-3"
           >
             <a
