--- a/src/sass/_cards.scss
+++ b/src/sass/_cards.scss
@@ -162,6 +162,9 @@
       rgba($color-ipn-dark, 0.8)
     ),
     url("../assets/1.png");
+  background-size: contain; /* Cambiado de 'cover' a 'contain' */
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 [im="2"] {
@@ -171,6 +174,9 @@
       rgba($color-ipn-dark, 0.8)
     ),
     url("../assets/2.png");
+  background-size: contain; /* Cambiado de 'cover' a 'contain' */
+  background-position: center;
+  background-repeat: no-repeat;
 }
 [im="3"] {
   background-image: linear-gradient(
@@ -179,6 +185,9 @@
       rgba($color-ipn-dark, 0.8)
     ),
     url("../assets/3.png");
+  background-size: contain; /* Cambiado de 'cover' a 'contain' */
+  background-position: center;
+  background-repeat: no-repeat;
 }
 [im="4"] {
   background-image: linear-gradient(
@@ -187,6 +196,9 @@
       rgba($color-ipn-dark, 0.8)
     ),
     url("../assets/4.png");
+  background-size: contain; /* Cambiado de 'cover' a 'contain' */
+  background-position: center;
+  background-repeat: no-repeat;
 }
 [im="5"] {
   background-image: linear-gradient(
@@ -195,6 +207,9 @@
       rgba($color-ipn-dark, 0.8)
     ),
     url("../assets/5.png");
+  background-size: contain; /* Cambiado de 'cover' a 'contain' */
+  background-position: center;
+  background-repeat: no-repeat;
 }
 [im="6"] {
   background-image: linear-gradient(
@@ -203,6 +218,9 @@
       rgba($color-ipn-dark, 0.8)
     ),
     url("../assets/6.png");
+  background-size: contain; /* Cambiado de 'cover' a 'contain' */
+  background-position: center;
+  background-repeat: no-repeat;
 }
 [im="7"] {
   background-image: linear-gradient(
@@ -211,6 +229,9 @@
       rgba($color-ipn-dark, 0.8)
     ),
     url("../assets/7.png");
+  background-size: contain; /* Cambiado de 'cover' a 'contain' */
+  background-position: center;
+  background-repeat: no-repeat;
 }
 [im="8"] {
   background-image: linear-gradient(
@@ -219,6 +240,9 @@
       rgba($color-ipn-dark, 0.8)
     ),
     url("../assets/8.png");
+  background-size: contain; /* Cambiado de 'cover' a 'contain' */
+  background-position: center;
+  background-repeat: no-repeat;
 }
 [im="9"] {
   background-image: linear-gradient(
@@ -227,6 +251,9 @@
       rgba($color-ipn-dark, 0.8)
     ),
     url("../assets/9.png");
+  background-size: contain; /* Cambiado de 'cover' a 'contain' */
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 // [im="2"] {
