Se cambian imagenes y se arregla responsive de 300 px

--- a/src/components/directorio/directorio.component.scss
+++ b/src/components/directorio/directorio.component.scss
@@ -239,6 +239,9 @@ button:hover {
 }
 
 @media (min-width: 300px) and (max-width: 513px) {
+  .card__details {
+    font-size: small;
+  }
   .wrapper {
     grid-template-columns: 1fr;
     padding: 3rem;
