--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -12,8 +12,8 @@ $color-orange-dark: rgb(180, 99, 6);
 $color-blue-ligth: rgb(80, 230, 250);
 $color-blue-dark: rgb(3, 50, 151);
 
-$color-ipn-dark: rgba(184, 7, 175, 0.716);
-$color-ipn-ligth: rgba(238, 61, 229, 0.322);
+$color-ipn-dark: rgb(209, 15, 199);
+$color-ipn-ligth: rgb(246, 150, 241);
 
 // #endregion COLORS
 
