Se corrige icono y se agregan iconos de boostrap

--- a/src/components/directorio/directorio.component.html
+++ b/src/components/directorio/directorio.component.html
@@ -24,7 +24,8 @@
               <div class="card__details">
                 {{ instituto.descipcion }}
               </div>
-              <i class="card__side--body-icon icon-basic-geolocalize-05"></i>
+              <!-- <i class="card__side--body-icon icon-basic-geolocalize-05"></i> -->
+              <i class="bi bi-geo-alt-fill card__side--body-icon"></i>
             </div>
           </div>
           <div
