--- a/src/sass/_cards.scss
+++ b/src/sass/_cards.scss
@@ -100,6 +100,9 @@
         );
         -webkit-background-clip: text;
         color: transparent;
+
+        // Animación de salto
+        animation: jump 2s ease-in-out infinite;
       }
     }
   }
@@ -310,4 +313,20 @@
     $color-orange-ligth,
     $color-orange-dark
   );
+}
+
+@keyframes jump {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-20px);
+  }
+  60% {
+    transform: translateY(-10px);
+  }
 }
