--- a/src/components/titulo/titulo.component.html
+++ b/src/components/titulo/titulo.component.html
@@ -3,6 +3,7 @@
   <div class="container-span ps-5">
     <span class="heading-secondary"> Directorio de Canalizaciones </span>
   </div>
+  @if (!isAutenticated) {
   <img
     class="login c-pointer"
     src="../../assets/login3.png"
@@ -10,6 +11,14 @@
     data-bs-toggle="modal"
     data-bs-target="#loginModal"
   />
+  } @if (isAutenticated) {
+  <img
+    class="logout c-pointer"
+    src="../../assets/cerrar-sesion.png"
+    alt="Cerrar Sesión"
+    (click)="logout()"
+  />
+  }
 </div>
 <div class="divisor">&nbsp;</div>
 
