Se maqueta la vista admin y la tabala

--- a/src/components/administrador/administrador.component.html
+++ b/src/components/administrador/administrador.component.html
@@ -1,1 +1,12 @@
-<p>administrador works!</p>
+<section>
+  <div class="container container__admin-institutos">
+    <div class="row">
+      <h2 class="container__admin-institutos--title">Gestión de Institutos</h2>
+    </div>
+    <div class="row d-flex justify-content-end mb-3">
+      <button class="btn container__admin-institutos--btn">+ Agregar</button>
+    </div>
+
+    <app-table />
+  </div>
+</section>
