--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -5,15 +5,18 @@ $color-grey: #eee;
 
 $color-green-ligth: rgb(80, 248, 170);
 $color-green-dark: rgb(19, 139, 3);
+$color-green-table: #138c87;
 
 $color-orange-ligth: rgb(252, 196, 75);
 $color-orange-dark: rgb(180, 99, 6);
 
 $color-blue-ligth: rgb(80, 230, 250);
-$color-blue-dark: rgb(3, 50, 151);
+$color-blue-dark: #033297;
 
 $color-ipn-dark: rgb(209, 15, 199);
 $color-ipn-ligth: rgb(246, 150, 241);
+$color-pink-dark: #d5538c;
+$color-pink-light: #ff68a9;
 
 // #endregion COLORS
 
