Se agrega el prevent para entrtar a detalles

--- a/src/components/directorio/directorio.component.html
+++ b/src/components/directorio/directorio.component.html
@@ -34,8 +34,7 @@
           >
             <a
               href="#"
-              (click)="verDetalle(instituto)"
-              [routerLink]="['/detalles']"
+              (click)="verDetalle(instituto); $event.preventDefault()"
               class="card__side--btn-text"
               >Ver Detalles &zigrarr;</a
             >
