Se corrige el nombre de funcion

--- a/src/components/table/table.component.html
+++ b/src/components/table/table.component.html
@@ -54,7 +54,7 @@
             </button>
             <button
               class="action-btn view-btn"
-              (click)="verDetalles(institucion)"
+              (click)="eliminarInstituto(institucion)"
             >
               <span class="delete-icon">
                 <img
