Formulario para edicion/nuevo

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -2,6 +2,8 @@
 
 $color-red: rgb(216, 33, 33);
 $color-grey: #eee;
+$color-dark-grey: #a7a5a5;
+$color-darker-grey: #606060;
 
 $color-green-ligth: rgb(80, 248, 170);
 $color-green-dark: rgb(19, 139, 3);
